--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://monaelhoby.github.io/e-commerce/",
+  "homepage": "https://monaelhoby.github.io/shoes_Store/",
   "name": "e-commerce",
   "version": "0.1.0",
   "private": true,
